--- a/index.html
+++ b/index.html
@@ -49,23 +49,21 @@ info@devstudio.com</a></li>
             <h3>Залиште свої дані, ми вам передзвонимо</h3>
             <p>Ім'я</p>
             <div class="cont-form-label">
-            <label for="">
-                <svg width="18px" height="18px" class="person-icon">
+                <svg width="18px" height="18px" class="icon-form">
                     <use href="./images/icons.svg#icon-person-black-18dp"></use>
                 </svg>
-                <input class="labels" name="people-name" type="text"></label></div>
+                <input class="label-input" name="people-name" type="text"></div>
             <p>Телефон</p>
-            <div class="cont-form-label">
-            <label for=""> <svg width="18px" height="18px" class="person-icon">
+            <div class="cont-form-label"> <svg class="icon-form" width="18px" height="18px" >
                 <use href="./images/icons.svg#icon-phone-black-18dp"></use>
             </svg>
-            <input class="labels" name="number" type="tel"></label></div>
+            <input class="label-input" name="number" type="tel"></div>
             <p>Пошта</p>
             <div class="cont-form-label">
-            <label for=""> <svg width="18px" height="18px" class="person-icon">
+            <svg width="18px" height="18px" class="icon-form">
                 <use href="./images/icons.svg#icon-email-black-18dp"></use>
             </svg>
-            <input class="labels" name="gmail" type="email"></label></div>
+            <input class="label-input" name="gmail" type="email"></div>
             <p>Коментар</p>
             <textarea name="comment" id="comments" cols="30"
             class="comments-area" placeholder="Введіть текст" rows="10"></textarea>
